<resources>
    <string name="app_name">In Any Place</string>
    <string name="facebook_app_id">898549084314229</string>
    <string name="fb_login_protocol_scheme">fb898549084314229</string>
    <string name="title_activity_food">FoodActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>
    <string name="action_clear_cart">Clear Cart</string>

    <string name="menu_home">Home</string>
    <string name="menu_restaurants">Restaurants</string>
    <string name="menu_back">Back</string>
    <string name="menu_category">Category</string>
    <string name="menu_food_list">Food List</string>
    <string name="menu_detail_food">Detail Food</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_log_out">Log Out</string>
    <string name="menu_statistics">Statistics</string>

    <string name="popular_categories">Popular Categories</string>
    <string name="best_deals">Best Deals</string>
    <string name="action_settings">Settings</string>
    <string name="size">Size</string>
    <string name="extra">Extra</string>
</resources>