<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/restaurant_group">
        <item
            android:id="@+id/nav_restaurant"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_restaurants" />
    </group>

    <group android:id="@+id/orders">
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/menu_orders" />
    </group>

    <group android:id="@+id/statistics">
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_baseline_insert_chart_outlined_24"
            android:title="@string/menu_statistics" />
    </group>

    <group android:id="@+id/sing_out">
        <item
            android:id="@+id/nav_sing_out"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/menu_log_out" />
    </group>

</menu>